# perch

./: .env.example  .gitignore  .pylintrc  Procfile  README.md  alpine-add  appspec.yml  architecture_memo.md  config.ini  coverage.xml  debug  devrun  eagle_metaparser.py  flask_app.py  gunicorn_conf.py  gunicorn_run  perch.db  perchdb.py  requirements.txt  run  selftest  setup.cfg  setup.py  update_db.sh
.github/workflows/: pylint.yml  pytest.yml
app/: app.py  eagle_metaparser.py  flask_app.py  perchdb.py
app/domain/: Actress.py  Author.py  Book.py  Folder.py  Item.py  Movie.py
app/list/: folder.py  top.py
app/play/: item.py
app/repository/: IFolderRepo.py  IItemRepo.py  MemRepo.py
app/templates/: admin.html  main.html  player.html  tags.html
app/use_cases/: ActressList.py  SearchMovie.py
application/: app.py  config.py
application/list/: folder.py  top.py
application/play/: item.py
application/templates/: actress.html  main.html
docs/: __init__.html  config.html  connection.html  eagle.html  update.html
old/perch/: config.py  flask_app.py
old/tests/: conftest.py  test_eagle_metaparser.py  test_flask_part.py
perch/: __init__.py  config.py  config.py.sample  db.py  eagle_metaparser.py  flask_app.py  perchdb.py
perch/db/: connection.py  eagle.py  update.py
perch/domain/: Actress.py  Author.py  Book.py  (+3 more)
templates/: actress.html  downloader.html  main.html  player.html  tags.html
tests/: __init__.py  conftest.py  test_db.py  test_dummy.py  test_eagle_metaparser.py  test_flask_part.py  test_perchdb.py
tool/: devrun  run  selftest  testrun
(+60 files in other folders)
