[metadata]
name = perch 
version = 0.0.1
license = BSD-3-Clause
maintainer = stormcorgi
maintainer_email = none
description = eagle assistant

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr