[metadata]
name = perch
version = 0.0.1
license = BSD-3-Clause
maintainer = stormcorgi
maintainer_email = none
description = eagle assistant

[options]
packages = find:
include_package_data = true
install_requires = Flask

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests

[pytest]
addopts = -v --capture=no --junit-xml=tests/results/results.xml
timeout = 5

[coverage:run]
branch = True
source = flaskr
